--- a/scenarioT/weather/forecast/hourly/on-118_metric_e.html
+++ b/scenarioT/weather/forecast/hourly/on-118_metric_e.html
@@ -111,10 +111,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<ol class="breadcrumb">
 <li><a href="../../../weather/en.html">Home</a></li><li><a href="../../../weather/services/environment.html">Environment and natural resources</a></li>
 <li><a href="../../../weather/index_e.html">Weather information</a></li>
-<li><a href="../../..//weather/mainmenu/weather_menu_e.html">Weather</a></li>
-<li><a href="../../..//weather/canada_e.html">Local Forecasts</a></li>
-<li><a href="../../..//weather/forecast/canada/ON_index_e.html">Ontario</a></li>
-<li><a href="../../..//weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
+<li><a href="../../../weather/mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="../../../weather/canada_e.html">Local Forecasts</a></li>
+<li><a href="../../../weather/forecast/canada/ON_index_e.html">Ontario</a></li>
+<li><a href="../../../weather/city/pages/on-118_metric_e.html">Ottawa (Kanata - Orléans)</a></li>
 		</ol>
 	</div>
 </div>
@@ -141,7 +141,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <div class="clearfix"></div>
 <main role="main" property="mainContentOfPage" class="container">
 <h1 id="wb-cont">24 Hour Forecast - Ottawa (Kanata - Orléans)</h1>
-<div id="watch"><h2><a href="/weather/warnings/ottawa-report_e.html">SEVERE THUNDERSTORM WATCH IN EFFECT</a></h2></div>
+<div id="watch"><h2><a href="../../../weather/warnings/ottawa-report_e.html">SEVERE THUNDERSTORM WATCH IN EFFECT</a></h2></div>
 <div class="table-responsive">
   <table class="table table-striped table-hover table-condensed wxo-media">
     <colgroup>
@@ -494,11 +494,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <section class="col-lg-4 col-md-6">
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/canada_e.html">Canadian Weather</a></li>
-            <li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
+            <li><a href="../../../weather/canada_e.html">Canadian Weather</a></li>
+            <li><a href="../../../weather/radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
-            <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
+            <li><a href="../../../weather/mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
 				<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 				<li><a href="/forecast/public_bulletins_e.html">Extended forecast</a></li>
@@ -507,8 +507,8 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
       <section class="col-lg-4 col-md-6">
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="https://gc-proto.github.io/weather/mainmenu/alert_menu_e.html">Public Alerts - Canada</a></li>
-            <li><a href="https://gc-proto.github.io/weather/lightning/index_e.html">Lightning</a></li>
+            <li><a href="../../../weather/mainmenu/alert_menu_e.html">Public Alerts - Canada</a></li>
+            <li><a href="../../../weather/lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
