--- a/scenarioT/weather/lightning/index_e.html
+++ b/scenarioT/weather/lightning/index_e.html
@@ -278,7 +278,7 @@
 	<div class="col-sm-2 col-xs-4 nat-container-1"><a id="arctic" title="Arctic Lightning Map" href="index_e.html?id=ARC#mapTop">Arctic</a></div>
 	<div class="col-sm-2 col-xs-4 nat-container-2"><a id="pacific" title="Pacific Lightning Map" href="index_e.html?id=PAC#mapTop">Pacific</a></div>
 	<div class="col-sm-2 col-xs-4 nat-container-1"><a id="prairies" title="Prairies Lightning Map" href="index_e.html?id=WRN#mapTop">Prairies</a></div>
-	<div class="col-sm-2 col-xs-4 nat-container-2"><a id="ontario" title="Ontario Lightning Map" href="https://gc-proto.github.io/weather/lightning/ONT-index_e.html">Ontario</a></div>
+	<div class="col-sm-2 col-xs-4 nat-container-2"><a id="ontario" title="Ontario Lightning Map" href="../../weather/lightning/ONT-index_e.html">Ontario</a></div>
 	<div class="col-sm-2 col-xs-4 nat-container-1"><a id="quebec" title="Quebec Lightning Map" href="index_e.html?id=QUE#mapTop">Quebec</a></div>
 	<div class="col-sm-2 col-xs-4 nat-container-2"><a id="atlantic" title="Atlantic Lightning Map" href="index_e.html?id=ATL#mapTop">Atlantic</a></div>
 </div>
