--- a/scenarioT/weather/radar/index_e.html
+++ b/scenarioT/weather/radar/index_e.html
@@ -62,7 +62,7 @@
   <area href="/radar/index_e.html?id=XDR" alt="Dryden - Radar image for station XDR located near Dryden, Ontario" title="Dryden - Radar image for station XDR located near Dryden, Ontario" shape="circle" coords="294,372,7" />
   <area href="/radar/index_e.html?id=WSO" alt="Exeter - Radar image for station WSO located near London, Ontario." title="Exeter - Radar image for station WSO located near London, Ontario." shape="circle" coords="407,416,8" />
   <area href="/radar/index_e.html?id=XFW" alt="Foxwarren - Radar image for station XFW located near Brandon, Manitoba." title="Foxwarren - Radar image for station XFW located near Brandon, Manitoba." shape="circle" coords="231,373,8" />
-  <area href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html" alt="Franktown - Radar image for station XFT located near Ottawa, Ontario." title="Franktown - Radar image for station XFT located near Ottawa, Ontario." shape="circle" coords="440,379,6" />
+  <area href="../radar/xft-index_e.html" alt="Franktown - Radar image for station XFT located near Ottawa, Ontario." title="Franktown - Radar image for station XFT located near Ottawa, Ontario." shape="circle" coords="440,379,6" />
   <area href="/radar/index_e.html?id=XGO" alt="Halifax - Radar image for station XGO located near Halifax, Nova Scotia." title="Halifax - Radar image for station XGO located near Halifax, Nova Scotia." shape="circle" coords="526,316,6" />
   <area href="/radar/index_e.html?id=WTP" alt="Holyrood - Radar image for station WTP located near St. John's, Newfoundland and Labrador." title="Holyrood - Radar image for station WTP located near St. John's, Newfoundland and Labrador." shape="circle" coords="567,234,6" />
   <area href="/radar/index_e.html?id=WHN" alt="Jimmy Lake - Radar image for station WHN located near Cold Lake, Alberta." title="Jimmy Lake - Radar image for station WHN located near Cold Lake, Alberta." shape="circle" coords="170,321,8" />
@@ -99,7 +99,7 @@
   <area href="/radar/index_e.html?id=XDR" alt="Dryden - Radar image for station XDR located near Dryden, Ontario" title="Dryden - Radar image for station XDR located near Dryden, Ontario" shape="circle" coords="206,260,7" />
   <area href="/radar/index_e.html?id=WSO" alt="Exeter - Radar image for station WSO located near London, Ontario." title="Exeter - Radar image for station WSO located near London, Ontario." shape="circle" coords="285,291,8" />
   <area href="/radar/index_e.html?id=XFW" alt="Foxwarren - Radar image for station XFW located near Brandon, Manitoba." title="Foxwarren - Radar image for station XFW located near Brandon, Manitoba." shape="circle" coords="162,261,8" />
-  <area href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html" alt="Franktown - Radar image for station XFT located near Ottawa, Ontario." title="Franktown - Radar image for station XFT located near Ottawa, Ontario." shape="circle" coords="308,265,6" />
+  <area href="../radar/xft-index_e.html" alt="Franktown - Radar image for station XFT located near Ottawa, Ontario." title="Franktown - Radar image for station XFT located near Ottawa, Ontario." shape="circle" coords="308,265,6" />
   <area href="/radar/index_e.html?id=XGO" alt="Halifax - Radar image for station XGO located near Halifax, Nova Scotia." title="Halifax - Radar image for station XGO located near Halifax, Nova Scotia." shape="circle" coords="368,221,6" />
   <area href="/radar/index_e.html?id=WTP" alt="Holyrood - Radar image for station WTP located near St. John's, Newfoundland and Labrador." title="Holyrood - Radar image for station WTP located near St. John's, Newfoundland and Labrador." shape="circle" coords="397,164,6" />
   <area href="/radar/index_e.html?id=WHN" alt="Jimmy Lake - Radar image for station WHN located near Cold Lake, Alberta." title="Jimmy Lake - Radar image for station WHN located near Cold Lake, Alberta." shape="circle" coords="119,225,8" />
@@ -218,9 +218,9 @@
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="http://www.canada.ca/en/index.html">Home</a></li><li><a href="http://www.canada.ca/en/services/environment/index.html">Environment and natural resources</a></li>
-<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
-<li><a href="https://gc-proto.github.io/weather/mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="../en.html">Home</a></li><li><a href="../services/environment.html">Environment and natural resources</a></li>
+<li><a href="../index_e.html">Weather information</a></li>
+<li><a href="../mainmenu/weather_menu_e.html">Weather</a></li>
 		</ol>
 	</div>
 </div>
@@ -579,7 +579,7 @@
 				<li class="rad-loc"><a href="index_e.html?id=WBI">Britt (Near Sudbury)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=XDR">Dryden</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WSO">Exeter (near London)</a></li>
-				<li><a href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html">Franktown (near Ottawa)</a></li>
+				<li><a href="../radar/xft-index_thunder_e.html">Franktown (near Ottawa)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WKR">King City (near Toronto)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=WGJ">Montreal River (near Sault Ste Marie)</a></li>
 				<li class="rad-loc"><a href="index_e.html?id=XTI">Northeast Ontario (near Timmins)</a></li>
@@ -660,7 +660,7 @@
 				<li><a href="index_e.html?id=WBI">Britt<br/>(near Sudbury)</a></li>
 				<li><a href="index_e.html?id=XDR">Dryden</a></li>
 				<li><a href="index_e.html?id=WSO">Exeter<br/>(near London)</a></li>
-				<li><a href="https://gc-proto.github.io/weather/radar/xft-index_thunder_e.html">Franktown<br/>(near Ottawa)</a></li>
+				<li><a href="../radar/xft-index_e.html">Franktown<br/>(near Ottawa)</a></li>
 				<li><a href="index_e.html?id=WKR">King City<br/>(near Toronto)</a></li>
 				<li><a href="index_e.html?id=WGJ">Montreal River<br/>(near Sault Ste Marie)</a></li>
 				<li><a href="index_e.html?id=XTI">Northeast Ontario<br/>(near Timmins)</a></li>
@@ -710,11 +710,11 @@
       <section class="col-lg-4 col-md-6">
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/canada_e.html">Canadian Weather</a></li>
-            <li><a href="/radar/index_e.html">Radar - Canada</a></li>
+            <li><a href="../canada_e.html">Canadian Weather</a></li>
+            <li><a href="../radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
-            <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
+            <li><a href="../mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
 				<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 				<li><a href="/forecast/public_bulletins_e.html">Extended forecast</a></li>
@@ -723,8 +723,8 @@
       <section class="col-lg-4 col-md-6">
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="https://gc-proto.github.io/weather/lightning/index_e.html">Lightning</a></li>
+            <li><a href="../warnings/index_e.html">Public Alerts - Canada</a></li>
+            <li><a href="../lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
