--- a/scenarioT/weather/radar/xft-index_e.html
+++ b/scenarioT/weather/radar/xft-index_e.html
@@ -148,10 +148,10 @@
 		<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-<li><a href="https://gc-proto.github.io/weather/en.html">Home</a></li><li><a href="https://gc-proto.github.io/weather/services/environment.html">Environment and natural resources</a></li>
-<li><a href="https://gc-proto.github.io/weather/index_e.html">Weather information</a></li>
-<li><a href="https://gc-proto.github.io/weather/mainmenu/weather_menu_e.html">Weather</a></li>
-<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar</a></li>
+<li><a href="../en.html">Home</a></li><li><a href="../services/environment.html">Environment and natural resources</a></li>
+<li><a href="../index_e.html">Weather information</a></li>
+<li><a href="../mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="../radar/index_e.html">Radar</a></li>
 		</ol>
 	</div>
 </div>
@@ -281,12 +281,12 @@
 		<div class="well">
 		<h2 class="mrgn-tp-0">Weather Links</h2>
 		<ul class="lst-spcd">
-		<li><a href="/canada_e.html">Canadian Weather</a></li>
-		<li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a></li>
+		<li><a href="../canada_e.html">Canadian Weather</a></li>
+		<li><a href="../warnings/index_e.html">Public Alerts - Canada</a></li>
+		<li><a href="../radar/index_thunder_e.html">Radar - Canada</a></li>
 		<li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
 		<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
-		<li><a href="/mainmenu/airquality_menu_e.html">Air Quality </a></li>
+		<li><a href="../mainmenu/airquality_menu_e.html">Air Quality </a></li>
 		<li><a href="/marine/index_e.html">Marine - Canada</a></li>
 		<li><a href="http://ec.gc.ca/rhc-wsc/default.asp?lang=En&amp;n=4EED50F1-1">Water Level and Flow</a></li>
 		</ul>
@@ -722,7 +722,7 @@
 <div class="clearfix"></div>
 <div id="links" class="hidden-xs hidden-print">        
 	<div class="city-header" id="top-header">
-		<a href="https://gc-proto.github.io/weather/radar/index_thunder_e.html">Radar - Canada</a>
+		<a href="../radar/index_e.html">Radar - Canada</a>
 	</div>
 	<div class="city-container" id="container5">
 	<div class="city-container" id="container4">
@@ -809,11 +809,11 @@
       <section class="col-lg-4 col-md-6">
 			<h3 class="wxo-footer-nav">Weather Forecasts</h3>
       	<ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/canada_e.html">Canadian Weather</a></li>
-            <li><a href="/radar/index_e.html">Radar - Canada</a></li>
+            <li><a href="../canada_e.html">Canadian Weather</a></li>
+            <li><a href="../radar/index_e.html">Radar - Canada</a></li>
             <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
             <li><a href="/marine/index_e.html">Marine - Canada</a></li>
-            <li><a href="/mainmenu/airquality_menu_e.html">Air Quality</a></li>
+            <li><a href="../mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
 				<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
 				<li><a href="/forecast/public_bulletins_e.html">Extended forecast</a></li>
@@ -822,8 +822,8 @@
       <section class="col-lg-4 col-md-6">
 		<h3 class="wxo-footer-nav">Weather Alerts</h3>
       <ul class="mrgn-bttm-lg lst-spcd">
-            <li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-            <li><a href="/lightning/index_e.html">Lightning</a></li>
+            <li><a href="../warnings/index_e.html">Public Alerts - Canada</a></li>
+            <li><a href="../lightning/index_e.html">Lightning</a></li>
             <li><a href="/hurricane/index_e.html">Hurricane</a></li>
             <li><a href="/warnings/weathersummaries_e.html">Weather Summaries</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-../default.asp?lang=En&amp;n=15E59C08-1">Hazardous Weather</a></li>
