--- a/scenarioT/weather/mainmenu/weather_menu_e.html
+++ b/scenarioT/weather/mainmenu/weather_menu_e.html
@@ -160,20 +160,20 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 				</div>
 			</details>
 			<ul class="unol">
-				<li><a href="/weather/canada_e.html">Canada</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=AB">Alberta</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=BC">British Columbia</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=MB">Manitoba</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=NB">New Brunswick</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=NL">Newfoundland and Labrador</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=NT">Northwest Territories</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=NS">Nova Scotia</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=NU">Nunavut</a></li>
-				<li><a href="/weather/forecast/canada/ON_index_e.html">Ontario</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=PE">Prince Edward Island</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=QC">Quebec</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=SK">Saskatchewan</a></li>
-				<li><a href="/forecast/canada/index_e.html?id=YT">Yukon</a></li>
+				<li><a href="../canada_e.html">Canada</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=AB">Alberta</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=BC">British Columbia</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=MB">Manitoba</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=NB">New Brunswick</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=NL">Newfoundland and Labrador</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=NT">Northwest Territories</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=NS">Nova Scotia</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=NU">Nunavut</a></li>
+				<li><a href="../forecast/canada/ON_index_e.html">Ontario</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=PE">Prince Edward Island</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=QC">Quebec</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=SK">Saskatchewan</a></li>
+				<li><a href="http://weather.gc.ca/forecast/canada/index_e.html?id=YT">Yukon</a></li>
 				<li><a href="http://www.ec.gc.ca/meteo-weather/default.asp?lang=En&amp;n=4D51ECA8-1">Guide to Forecasts</a></li>
 			</ul>
 	
@@ -227,20 +227,20 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		<section class="col-lg-4 col-md-6 sect">
 			<h2 class="header">Text Bulletins</h2>		
 				<ul class="unol">
-					<li><a href="/forecast/public_bulletins_e.html?Bulletin=fpcn48.cwao">Canada-UV</a></li>
-					<li><a href="/forecast/public_bulletins_e.html#AB">Alberta</a></li>
-				   <li><a href="/forecast/public_bulletins_e.html#BC">British Columbia</a></li>
-					<li><a href="/forecast/public_bulletins_e.html#MB">Manitoba</a></li>
-				  <li><a href="/forecast/public_bulletins_e.html#NB">New Brunswick</a></li>
-				   <li><a href="/forecast/public_bulletins_e.html#NL">Newfoundland and Labrador</a></li>
-					<li><a href="/forecast/public_bulletins_e.html#NT">Northwest Territories</a></li> 
-					<li><a href="/forecast/public_bulletins_e.html#NS">Nova Scotia</a></li>
-					<li><a href="/forecast/public_bulletins_e.html#NU">Nunavut</a></li>
-					<li><a href="/forecast/public_bulletins_e.html#ON">Ontario</a></li>
-					<li><a href="/forecast/public_bulletins_e.html#PE">Prince Edward Island</a></li>
-					<li><a href="/forecast/public_bulletins_e.html#QC">Quebec</a></li>
-					<li><a href="/forecast/public_bulletins_e.html#SK">Saskatchewan</a></li>
-					<li><a href="/forecast/public_bulletins_e.html#YT">Yukon</a></li>
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html?Bulletin=fpcn48.cwao">Canada-UV</a></li>
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#AB">Alberta</a></li>
+				   <li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#BC">British Columbia</a></li>
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#MB">Manitoba</a></li>
+				  <li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#NB">New Brunswick</a></li>
+				   <li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#NL">Newfoundland and Labrador</a></li>
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#NT">Northwest Territories</a></li> 
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#NS">Nova Scotia</a></li>
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#NU">Nunavut</a></li>
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#ON">Ontario</a></li>
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#PE">Prince Edward Island</a></li>
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#QC">Quebec</a></li>
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#SK">Saskatchewan</a></li>
+					<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html#YT">Yukon</a></li>
 				</ul>
 		
 		</section>
@@ -261,7 +261,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
             <li><a href="../../weather/mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
 				<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
-				<li><a href="/forecast/public_bulletins_e.html">Extended forecast</a></li>
+				<li><a href="http://weather.gc.ca/forecast/public_bulletins_e.html">Extended forecast</a></li>
 			</ul>
       </section>
       <section class="col-lg-4 col-md-6">
