--- a/scenarioT/weather/satellite/index_e.html
+++ b/scenarioT/weather/satellite/index_e.html
@@ -157,15 +157,16 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	   			<div class="well">
 <h2 class="mrgn-tp-0">Weather Links</h2>
 	<ul class="lst-spcd">
-		<li><a href="/canada_e.html">Canadian Weather</a></li>
-		<li><a href="/warnings/index_e.html">Public Alerts - Canada</a></li>
-		<li><a href="/radar/index_e.html">Radar - Canada</a></li>
-		<li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
-		<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
-		<li><a href="/mainmenu/airquality_menu_e.html">Air Quality </a></li>
-		<li><a href="/marine/index_e.html">Marine - Canada</a></li>
+		<li><a href="../../weather/canada_e.html">Canadian Weather</a></li>
+		<li><a href="../../weather/warnings/index_e.html">Public Alerts - Canada</a></li>
+		<li><a href="../../weather/radar/index_e.html">Radar - Canada</a></li>
+		<li><a href="">Satellite - Canada</a></li>
+		<li><a href="http://weather.gc.ca/weather/saisons/index_e.html">Seasonal forecasts</a></li>
+		<li><a href="../../weather/mainmenu/airquality_menu_e.html">Air Quality </a></li>
+		<li><a href="http://weather.gc.ca/weather/marine/index_e.html">Marine - Canada</a></li>
 		<li><a href="http://ec.gc.ca/rhc-wsc/default.asp?lang=En&amp;n=4EED50F1-1">Water Level and Flow</a></li>
 	</ul>
+
 </div>
 			</aside>
 		</div>
