Weather shortcuts as button

--- a/scenarioT/weather/satellite/index_e.html
+++ b/scenarioT/weather/satellite/index_e.html
@@ -119,7 +119,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <div class="container hidden-print">
 
 <span class='pull-right profile-link'>&#160;|&#160;<a href='/myprofile/index_e.html'>My Weather Profile</a></span>
-	<a href="#weather-topics" class="pull-right">Weather Topics</a>
+	<a href="#weather-topics" class="pull-right btn btn-default">Weather shortcuts</a>
 	<span id="wxo-divider" class="pull-right wb-invisible">|&#160;</span>
 	<form class="mrgn-rght-sm pull-right" role="search" id="cityjump" method="GET" action="/city/jump_e.html">
    	<label id="search-label" for="city" accesskey="g" class="pull-right wb-invisible">Access city</label>
