--- a/scenarioT/weather/satellite/index_e.html
+++ b/scenarioT/weather/satellite/index_e.html
@@ -119,7 +119,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
   <div class="container hidden-print">
 
 <span class='pull-right profile-link'>&#160;|&#160;<a href='/myprofile/index_e.html'>My Weather Profile</a></span>
-	<a href="#weather-topics" class="pull-right btn btn-default">Weather shortcuts</a>
+	<a href="#weather-shortcuts" class="overlay-lnk pull-right btn btn-default" aria-controls="right-panel" role="button">Weather shortcuts</a>
 	<span id="wxo-divider" class="pull-right wb-invisible">|&#160;</span>
 	<form class="mrgn-rght-sm pull-right" role="search" id="cityjump" method="GET" action="/city/jump_e.html">
    	<label id="search-label" for="city" accesskey="g" class="pull-right wb-invisible">Access city</label>
@@ -130,6 +130,16 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
    	<noscript><input type="submit" id="jumpnojs" value="Go" formnovalidate/></noscript>
 	<div id="invalid-city"></div>
 </form>
+<section id="weather-shortcuts" class="wb-overlay modal-content overlay-def wb-panel-r">
+	<header class="modal-header">
+		<h2 class="modal-title">Weather shortcuts</h2>
+	</header>
+	<div class="modal-body">
+		list</br>
+		of</br>
+		links</br>
+	</div>
+</section>
 </div>
 <div class="clearfix"></div>
 <div id='collapsible-alerts' class='container'></div>
