sitemenu2 like sitemenu sigh

--- a/scenarioT/weather/ajax/sitemenu2-en.html
+++ b/scenarioT/weather/ajax/sitemenu2-en.html
@@ -51,20 +51,20 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </li>
 <li><a href="#business" class="item">Business</a>
 <ul class="sm list-unstyled" id="business" role="menu">
-<li><a href="https://neoinsight.github.io/start-business/mvp/1.1%20start-business-en.html">Starting a business</a></li>
+<li><a href="https://www.canada.ca/en/services/business/start.html">Starting a business</a></li>
 <li><a href="https://www.canada.ca/en/services/business/grants.html">Grants and financing</a></li>
-<li><a href="https://neoinsight.github.io/start-business/mvp/1.2%20business-taxes-en.html">Business taxes</a></li>
+<li><a href="https://www.canada.ca/en/services/business/taxes.html">Business taxes</a></li>
 <li><a href="https://www.canada.ca/en/services/business/sell.html">Sell to government</a></li>
 <li><a href="https://www.canada.ca/en/services/business/trade.html">International trade and investment</a></li>
 <li><a href="https://www.canada.ca/en/services/science/innovation.html">Research and development (R&amp;D) and innovation</a></li>
 <li><a href="https://www.canada.ca/en/services/business/ip.html">Intellectual property and copyright</a></li>
 <li><a href="https://www.canada.ca/en/services/business/permits.html">Permits, licences and regulations</a></li>
 <li><a href="https://www.canada.ca/en/services/business/research.html">Research and business intelligence</a></li>
-<li><a href="https://neoinsight.github.io/start-business/mvp/1.3%20hiring-en.html">Hiring and managing employees</a></li>
-<li><a href="https://neoinsight.github.io/start-business/mvp/1.4%20maintain-grow-improve-business-en.html">Maintain, grow and improve your business</a></li>
+<li><a href="https://www.canada.ca/en/services/business/hire.html">Hiring and managing employees</a></li>
+<li><a href="https://www.canada.ca/en/services/business/maintaingrowimprovebusiness.html">Maintain, grow and improve your business</a></li>
 <li><a href="https://www.canada.ca/en/services/business/protecting.html">Protect your business</a></li>
 <li><a href="https://www.canada.ca/en/services/business/bankruptcy.html">Bankruptcy for business</a></li>
-<li class="slflnk"><a href="https://neoinsight.github.io/start-business/mvp/1.0%20business-en.html">Business – More</a></li>
+<li class="slflnk"><a href="https://www.canada.ca/en/services/business.html">Business – More</a></li>
 </ul>
 </li>
 <li><a href="#benefits" class="item">Benefits</a>
@@ -95,19 +95,19 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <li><a href="#taxes" class="item">Taxes</a>
 <ul class="sm list-unstyled" id="taxes" role="menu">
 <li><a href="https://www.canada.ca/en/services/taxes/income-tax.html">Income Tax</a></li>
-<li><a href="https://neoinsight.github.io/start-business/mvp/2.1%20gsthst-en.html">GST/HST</a></li>
-<li><a href="https://neoinsight.github.io/start-business/mvp/2.2%20payroll-en.html">Payroll</a></li>
-<li><a href="https://neoinsight.github.io/start-business/mvp/2.3%20business-number-en.html">Business number</a></li>
+<li><a href="https://www.canada.ca/en/services/taxes/gsthst.html">GST/HST</a></li>
+<li><a href="https://www.canada.ca/en/services/taxes/payroll.html">Payroll</a></li>
+<li><a href="https://www.canada.ca/en/services/taxes/business-number.html">Business number</a></li>
 <li><a href="https://www.canada.ca/en/services/taxes/savings-and-pension-plans.html">Savings and pension plans</a></li>
 <li><a href="https://www.canada.ca/en/services/taxes/child-and-family-benefits.html">Child and family benefits</a></li>
 <li><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies.html">Excise taxes, duties, and levies</a></li>
 <li><a href="https://www.canada.ca/en/services/taxes/charities.html">Charities and giving</a></li>
-<li class="slflnk"><a href="https://neoinsight.github.io/start-business/mvp/2.0%20taxes-en.html">Taxes – More</a></li>
+<li class="slflnk"><a href="https://www.canada.ca/en/services/taxes.html">Taxes – More</a></li>
 </ul>
 </li>
 <li><a href="#more-services" class="item">More services</a>
 <ul class="sm list-unstyled" id="more-services" role="menu">
-<li><a href="/weather/services/environment.html">Environment and natural resources</a></li>
+<li><a href="/weather/scenarioT/weather/services/environment.html">Environment and natural resources</a></li>
 <li><a href="https://www.canada.ca/en/services/defence.html">National security and defence</a></li>
 <li><a href="https://www.canada.ca/en/services/culture.html">Culture, history and sport</a></li>
 <li><a href="https://www.canada.ca/en/services/policing.html">Policing, justice and emergencies</a></li>
