fix link to satellite

--- a/scenarioT/weather/index_e.html
+++ b/scenarioT/weather/index_e.html
@@ -174,7 +174,7 @@ h2, .h1 {
                         </div>
                         <div role="tabpanel" id="tab4" class="out fade">
                            <figure>
-										<a href="/satellite/index_e.html">
+										<a href="satellite/index_e.html">
 	                              <img src="./data/wxoimages/homeSatellite_750x223.png" alt="">
 										</a>
                               <figcaption>
