fix link to satellite

--- a/scenarioT/weather/index_e.html
+++ b/scenarioT/weather/index_e.html
@@ -178,7 +178,7 @@ h2, .h1 {
 	                              <img src="./data/wxoimages/homeSatellite_750x223.png" alt="">
 										</a>
                               <figcaption>
-                                 <p><a href="/satellite/index_e.html" class="learnmore"> Satellite </a></p>
+                                 <p><a href="satellite/index_e.html" class="learnmore"> Satellite </a></p>
                               </figcaption>
                            </figure>
                         </div>
@@ -206,14 +206,14 @@ h2, .h1 {
                             <li id="panel1c"><a href="../weather/canada_e.html"><span class="wb-inv">Current Conditions</span></a></li>
                             <li id="panel2c"><a href="../weather/warnings/index_e.html"><span class="wb-inv">Public Alerts</span></a></li>
                             <li id="panel3c"><a href="../weather/radar/index_e.html"><span class="wb-inv">Radar</span></a></li>
-                            <li id="panel4c"><a href="/satellite/index_e.html"><span class="wb-inv">Satellite</span></a></li>
+                            <li id="panel4c"><a href="satellite/index_e.html"><span class="wb-inv">Satellite</span></a></li>
 									                             <li id="panel5c"><a href="/jet_stream/index_e.html"><span class="wb-inv">Jet Stream</span></a></li>
 								 	                         </ul>
                         <ul aria-hidden="true" id="linkmenu">
                             <li id="panel1e"><a href="../weather/canada_e.html">Current Conditions</a></li>
                             <li id="panel2e"><a href="../weather/warnings/index_e.html">Public Alerts</a></li>
                             <li id="panel3e"><a href="../weather/radar/index_e.html">Radar</a></li>
-                            <li id="panel4e"><a href="/satellite/index_e.html">Satellite</a></li>
+                            <li id="panel4e"><a href="satellite/index_e.html">Satellite</a></li>
 									                             <li id="panel5e"><a href="/jet_stream/index_e.html">Jet Stream</a></li>
 								 	                         </ul>
                     </div>
@@ -297,8 +297,8 @@ h2, .h1 {
       	<ul class="mrgn-bttm-lg lst-spcd">
             <li><a href="../weather/canada_e.html">Canadian Weather</a></li>
             <li><a href="../weather/radar/index_e.html">Radar - Canada</a></li>
-            <li><a href="/satellite/index_e.html">Satellite - Canada</a></li>
-            <li><a href="/marine/index_e.html">Marine - Canada</a></li>
+            <li><a href="satellite/index_e.html">Satellite - Canada</a></li>
+            <li><a href="http://weather.gc.ca/marine/index_e.html">Marine - Canada</a></li>
             <li><a href="../weather/mainmenu/airquality_menu_e.html">Air Quality</a></li>
             <li><a href="http://www.ec.gc.ca/glaces-ice/default.asp?lang=En&amp;n=D32C361E-1">Canadian Ice Service</a></li>
 				<li><a href="/saisons/index_e.html">Seasonal forecasts</a></li>
