--- a/scenarioT/weather/airquality/pages/onaq-008_e.html
+++ b/scenarioT/weather/airquality/pages/onaq-008_e.html
@@ -11,22 +11,22 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
 <!-- Meta data-->
 <!--[if gte IE 9 | !IE ]><!-->
-<link href="/weather/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="/weather/template/GCWeb/css/theme.min.css">
-<link rel="stylesheet" href="/weather/airquality/css/airquality.css">
+<link href="../..//GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="../..//template/GCWeb/css/theme.min.css">
+<link rel="stylesheet" href="../..//airquality/css/airquality.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<link href="/weather/GCWeb/assets/favicon.ico" rel="shortcut icon" />
+<link href="../..//GCWeb/assets/favicon.ico" rel="shortcut icon" />
 
-<link rel="stylesheet" href="/weather/GCWeb/css/ie8-theme.min.css" />
+<link rel="stylesheet" href="../..//GCWeb/css/ie8-theme.min.css" />
 <link rel="stylesheet" href="/cacheable/css/city/jquery-ui-1.10.3.custom.min.css">
-<script src="/weather/wet-boew/js/ie8-wet-boew.min.js"></script>
+<script src="../..//wet-boew/js/ie8-wet-boew.min.js"></script>
 <![endif]-->
 <!--[if lte IE 9]>
 
 
 <![endif]-->
-<noscript><link rel="stylesheet" href="/weather/wet-boew/css/noscript.min.css" /></noscript>
+<noscript><link rel="stylesheet" href="../..//wet-boew/css/noscript.min.css" /></noscript>
 <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 <script>dataLayer1 = [];</script>
 <!-- End Google Tag Manager -->
@@ -37,11 +37,11 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer1'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer1','GTM-TLGQ9K');</script>
 <!-- End Google Tag Manager -->
 	
-<link rel="alternate" type="application/atom+xml" title="ATOM feed for Ottawa (Kanata - Orléans) - Weather - Environment Canada" href="/weather/rss/city/on-118_e.xml">
-<link rel="alternate" type="application/atom+xml" title="ATOM feed for Ottawa (Kanata - Orléans) - Warning - Environment Canada" href="/weather/rss/warning/on-118_e.xml">
-<link rel="stylesheet" href="/weather/city/styles/city.css">
-<link rel="stylesheet" href="/weather/cacheable/css/city/city_js.css">
-<link rel="stylesheet" href="/weather/template/wxo/css/wxo.css" />
+<link rel="alternate" type="application/atom+xml" title="ATOM feed for Ottawa (Kanata - Orléans) - Weather - Environment Canada" href="../..//rss/city/on-118_e.xml">
+<link rel="alternate" type="application/atom+xml" title="ATOM feed for Ottawa (Kanata - Orléans) - Warning - Environment Canada" href="../..//rss/warning/on-118_e.xml">
+<link rel="stylesheet" href="../..//city/styles/city.css">
+<link rel="stylesheet" href="../..//cacheable/css/city/city_js.css">
+<link rel="stylesheet" href="../..//template/wxo/css/wxo.css" />
 <ul id="wb-tphp">
 <li class="wb-slc">
 <a class="wb-sl" href="#wb-cont">Skip to main content</a>
@@ -114,10 +114,10 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	<div class="container">
 	<div class="row">
 		<ol class="breadcrumb">
-		<li><a href="/weather/en.html">Home</a></li><li><a href="/weather/services/environment.html">Environment and natural resources</a></li><li><a href="/weather/index_e.html">Weather information</a></li>
-<li><a href="/weather/mainmenu/weather_menu_e.html">Weather</a></li>
-<li><a href="/weather/canada_e.html">Local forecasts</a></li>
-<li><a href="/weather/forecast/canada/ON_index_e.html" title="Ontario">Ontario</a></li>
+		<li><a href="../..//en.html">Home</a></li><li><a href="../..//services/environment.html">Environment and natural resources</a></li><li><a href="../..//index_e.html">Weather information</a></li>
+<li><a href="../..//mainmenu/weather_menu_e.html">Weather</a></li>
+<li><a href="../..//canada_e.html">Local forecasts</a></li>
+<li><a href="../..//forecast/canada/ON_index_e.html" title="Ontario">Ontario</a></li>
 		</ol>
 	</div>
 </div>
@@ -466,17 +466,17 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <section class="gc-prtts hidden-print"><h2>Features</h2><div class="row"><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://ec.gc.ca/uv/default.asp?lang=En&amp;n=DCF1C20A-1">
 <h3 class="h5">UV Index and sun protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../..//cacheable/images/banners/SM_123_03_30-UV-Index-and-Sun-Protection_button360x203.jpg" alt="" />
 </a>
 <p>Be weather wise!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.canada.ca/en/health-canada/services/sun-safety/extreme-heat-heat-waves.html">
 <h3 class="h5">Extreme Heat Protection</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../..//cacheable/images/banners/SM_124_03_30-Extreme-Heat-02_button_360x203.jpg" alt="" />
 </a>
 <p>Be prepared!</p></section><section class="col-lg-4 col-md-6 mrgn-bttm-md">
 <a rel="external" href="/redirect.php?url=http://www.ec.gc.ca/cas-aqhi/">
 <h3 class="h5">Be Air Aware</h3>
-<img class="img-responsive thumbnail mrgn-bttm-sm" src="/weather/cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg" alt="" />
+<img class="img-responsive thumbnail mrgn-bttm-sm" src="../..//cacheable/images/banners/SM_120_03_30-Air-Quality_01_360x203.jpg" alt="" />
 </a>
 <p>Air Quality Health Index</p></section></div></section>
 <div class="row pagedetails">
@@ -554,20 +554,20 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 </footer>
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="/weather/wet-boew/js/wet-boew.min.js"></script>
+<script src="../..//wet-boew/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-<script src="/weather/wet-boew/js/ie8-wet-boew2.min.js"></script>
+<script src="../..//wet-boew/js/ie8-wet-boew2.min.js"></script>
 
 <![endif]-->
-<script src="/weather/GCWeb/js/theme.min.js"></script>
-<script src="/weather/cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
-<script src="/weather/cacheable/js/city/availableTags_e.min.js"></script>
-<script src="/weather/GCWeb/js/deps/jquery.dataTables.min.js"></script>
-<script src="/weather/cacheable/js/myprofile/alerts-1.0.min.js"></script>
-<script src="/weather/cacheable/js/myprofile/refresher-1.0.min.js"></script>
-<script type="text/javascript" src="/weather/city/js/cityjump.js"></script>
-<script src="/weather/GCWeb/js/theme.min.js"></script>
+<script src="../..//GCWeb/js/theme.min.js"></script>
+<script src="../..//cacheable/js/city/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="../..//cacheable/js/city/availableTags_e.min.js"></script>
+<script src="../..//GCWeb/js/deps/jquery.dataTables.min.js"></script>
+<script src="../..//cacheable/js/myprofile/alerts-1.0.min.js"></script>
+<script src="../..//cacheable/js/myprofile/refresher-1.0.min.js"></script>
+<script type="text/javascript" src="../..//city/js/cityjump.js"></script>
+<script src="../..//GCWeb/js/theme.min.js"></script>
 </body>
 </html>
 
